--- a/Languages/default-de.xml
+++ b/Languages/default-de.xml
@@ -1098,7 +1098,7 @@ Other:
 				<item id="ID_LIBRARY_MOVE" text="Datei(en) _verschieben..."/>
 				<item id="ID_LIBRARY_COPY" text="Datei(en) _kopieren..."/>
 			</menu>
-			<item id="ID_LIBRARY_REBUILD_ANSI" text="_Localise Metadata"/>
+			<item id="ID_LIBRARY_REBUILD_ANSI" text="_Metadaten lokalisieren"/>
 			<separator />
 			<item id="ID_LIBRARY_PROPERTIES" text="_Eigenschaften"/>
 		</menu>
@@ -1130,7 +1130,7 @@ Other:
 				<item id="ID_LIBRARY_MOVE" text="Datei(en) _verschieben..."/>
 				<item id="ID_LIBRARY_COPY" text="Datei(en) _kopieren..."/>
 			</menu>
-			<item id="ID_LIBRARY_REBUILD_ANSI" text="_Localise Metadata"/>
+			<item id="ID_LIBRARY_REBUILD_ANSI" text="_Metadaten lokalisieren"/>
 			<separator />
 			<item id="ID_LIBRARY_COLUMNS" text="S_palteneinstellungen..."/>
 			<separator />
@@ -1166,7 +1166,7 @@ Other:
 				<item id="ID_LIBRARY_MOVE" text="Datei(en) _verschieben..."/>
 				<item id="ID_LIBRARY_COPY" text="Datei(en) _kopieren..."/>
 			</menu>
-			<item id="ID_LIBRARY_REBUILD_ANSI" text="_Localise Metadata"/>
+			<item id="ID_LIBRARY_REBUILD_ANSI" text="_Metadaten lokalisieren"/>
 			<separator />
 			<item id="ID_LIBRARY_PROPERTIES" text="_Eigenschaften"/>
 		</menu>
@@ -1200,7 +1200,7 @@ Other:
 				<item id="ID_LIBRARY_MOVE" text="Datei(en) _verschieben..."/>
 				<item id="ID_LIBRARY_COPY" text="Datei(en) _kopieren..."/>
 			</menu>
-			<item id="ID_LIBRARY_REBUILD_ANSI" text="_Localise Metadata"/>
+			<item id="ID_LIBRARY_REBUILD_ANSI" text="_Metadaten lokalisieren"/>
 			<separator />
 			<item id="ID_LIBRARY_COLUMNS" text="S_palteneinstellungen..."/>
 			<separator />
@@ -2877,7 +2877,7 @@ Other:
 		<string id="16801" value="Sie haben noch nicht angegeben, ob Sie eine Firewall benutzen. Bitte wählen Sie eine Firewalloption bevor Sie fortfahren."/>
 		<string id="16802" value="Sie haben keine Ordner freigegeben.  Sind Sie sicher?"/>
 		<string id="16803" value="Der Ordner den Sie freigegeben haben, ist bereits als Teil eines anderen Ordners freigegeben:\n\n%s"/>
-		<string id="16804" value="Sie haben in ihrem Profil keinen Nickname angegeben.\n\nEs wird empfohlen einen Nickname anzugeben, so dass andere Benutzer sehen können mit wem sie verbunden sind.\n\nSind Sie sicher, dass Sie ohne Nickname fortfahren möchten?"/>
+		<string id="16804" value="Sie haben in ihrem Profil keinen Nickname angegeben.\n\nBitte geben Sie einen Nickname an."/>
 		<string id="16805" value="Sie haben in ihrem Profil keinen Standort angegeben.\n\nEs wird empfohlen einen Standort anzugeben, damit andere Benutzer sehen können woher Sie kommen.\n\nSind Sie sicher, dass Sie ohne einen Standort anzugeben fortfahren möchten?"/>
 		<string id="16806" value="Sie haben angegeben, dass Sie in ihrem NAT Router / Firewall port-forwarding benutzen möchten.\n\nBitte konfigurieren Sie ihr Netzwerk um port %i an ihren PC weiterzuleiten."/>
 		<string id="16807" value="Bitte geben sie das gewünschte Bandbreitenlimit ein. &quot;123 kb/s&quot; für Kilobits pro Sekunde, oder &quot;123 KB/s&quot; für Kilobytes pro Sekunde."/>
@@ -3535,7 +3535,7 @@ Other:
 			<control caption="Shareaza ist ein viel freundlicherer Ort, wenn jeder ein paar Sachen über sich schreibt."/>
 			<control caption="Ich heiße:"/>
 			<control />
-			<control caption="und ich bin ein:"/>
+			<control caption="und ich bin:"/>
 			<control caption="&#160;( Bitte wählen )"/>
 			<control caption="&#160;( Bitte wählen )| Junge| Mädchen| Mann| Frau"/>
 			<control caption="aus:"/>
