--- a/trunk/Languages/default-ru.xml
+++ b/trunk/Languages/default-ru.xml
@@ -2511,7 +2511,7 @@
 	<string id="8141" value="Показывать панель поиска"/>
 	<string id="8142" value="Скрыть панель поиска"/>
 	<string id="8143" value="Идет поиск..."/>
-	<string id="8144" value="Начать поиск"/>
+	<string id="8144" value="Поиск"/>
 	<string id="8145" value="Искать ещё"/>
 	<string id="8146" value="Стоп"/>
 	<string id="8147" value="Любой тип файла"/>
