Updated to v. 2.1.0.147 by Gauche

--- a/Languages/default-pt-br.xml
+++ b/Languages/default-pt-br.xml
@@ -3311,7 +3311,7 @@
 		<control caption="_Opções:"/>
 		<control caption="_Acionar Agendador"/>
 		<control/><control/>
-		<control caption="_Restringir redes quando limitado"/>
+		<control caption="_Conectar à G2, quando limitado"/>
 		<control caption="Informação:"/>
 		<control caption="Dom"/>
 		<control caption="Seg"/>
