Upgrade title changed

--- a/Languages/default-lt.xml
+++ b/Languages/default-lt.xml
@@ -1473,7 +1473,7 @@ right quote	&#147;
 
 		<group id="3">
 			<icon res="128" width="32" height="32"/><gap size="8"/>
-			<heading align="middle">A T S I R A D O &#160; A T N A U J I N I M A S</heading>
+			<heading align="middle">P A S I R O D Ė &#160; A T N A U J I N I M A S</heading>
 			<newline gap="8" indent="42"/>
 			<text id="Upgrade"/>
 			<newline gap="6"/>
