--- a/Languages/default-lt.xml
+++ b/Languages/default-lt.xml
@@ -21,7 +21,7 @@ right quote	&#147;
 		description="Shareaza Lithuanian Skin File"
 		link="http://www.shareaza.com/"
 		email="rrol2002(at)hotmail(dot)com"
-		version="2.1.0.147"
+		version="2.1.0.149"
 		type="Language"
 		language="lt"
 		prompt="Paspauskite čia, jei Jūsų gimtoji kalba lietuvių."
@@ -2069,8 +2069,10 @@ right quote	&#147;
 		bet kai kurie bylų vardai gali būti neteisingi.</text>
 		<newline gap="8"/>
 		<text>Dauguma torrent bylų kūrimo programų turėtų leisti pataisyti šią torrent bylą. Pataisymas garantuotų,
-		kad ji deramai dirbs visose BitTorrent programose. Apsilankykite Shareaza forumuose, jei Jums reikalinga
-		papildoma pagalba.</text>
+		kad ji deramai dirbs visose BitTorrent programose.</text>
+		<newline gap="8"/>
+		<link target="http://www.shareaza.com/torrentencoding/">Spauskite čia, jei reikalinga pagalba</link>
+		<text> arba jei norite parsisiųsti torrent bylų taisymo programų.</text>
 	</document>
 
 	<document name="GeneralHelp.DonkeyServerList">
