BT Info dialog "by" word translation rephrased

--- a/Languages/default-ru.xml
+++ b/Languages/default-ru.xml
@@ -4078,7 +4078,7 @@
 		<control/>
 		<control caption="Создан:"/>
 		<control/>
-		<control caption="Программа:"/>
+		<control caption="Чем:"/>
 		<control/>
 		<control caption="Комментарии:"/>
 		<control/>
