--- a/Languages/default-ru.xml
+++ b/Languages/default-ru.xml
@@ -2905,7 +2905,7 @@
 	<string id="16942" value="Закрываю соединение обзора пользователя с %s."/>
 	<string id="16943" value=" Просмотр %s"/>
 	<string id="16944" value=" Найдено %i разделяемых файлов в хранилище у %s."/>
-	<string id="16992" value="Shareaza не смогла создать экземпляр модуля MediaServices.  Переустановите Shareaza программу и удостоверьтесь, что у Вас установлены все необходимые медиа кодеки драйвера вывода данных."/>
+	<string id="16992" value="Shareaza не смогла создать экземпляр модуля MediaServices.  Переустановите Shareaza программу и удостоверьтесь, что у Вас установлены все необходимые медиа кодеки и драйвера вывода данных."/>
 	<string id="16993" value="Все медиа файлы|*.asx;*.wax;*.m3u;*.wvx;*.wmx;*.asf;*.wav;*.snd;*.au;*.aif;*.aifc;*.aiff;*.wma;*.rm;*.mp3;*.ogg;*.ogm;*.cda;*.mid;*.rmi;*.midi;*.avi;*.asf;*.mpeg;*.mpg;*.m1v;*.mp2;*.mpa;*.mpe;*.wmv|Списки воспроизв.|*.asx;*.wax;*.m3u;*.wvx;*.wmx|Аудио файлы|*.asf;*.wav;*.snd;*.au;*.aif;*.aifc;*.aiff;*.wma;*.rm;*.mp3;*.ogg;*.ogm|Видео файлы|*.avi;*.asf;*.mpeg;*.mpg;*.m1v;*.mp2;*.mpa;*.mpe;*.wmv|CD аудио трэки|*.cda|MIDI файлы|*.mid;*.rmi;*.midi|Все файлы|*.*||"/>
 	<string id="16994" value="Не могу загрузить медиа файл «%s»"/>
 	<string id="16995" value="Файл может быть поврежден, или Вы не имеете подходящих кодеков для его воспроизведения."/>
